// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Content Test description 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-backdrop"
  >
    <div
      class="pf-v6-l-bullseye"
    >
      <div
        aria-describedby="descriptorId"
        aria-labelledby="labelId"
        aria-modal="true"
        class="pf-v6-c-modal-box"
        data-ouia-component-type="PF6/ModalContent"
        data-ouia-safe="true"
        id="boxId"
        role="dialog"
      >
        <div
          class="pf-v6-c-modal-box__close"
        >
          <button
            aria-label="Close"
            class="pf-v6-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-:r2:"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                />
              </svg>
            </span>
          </button>
        </div>
        <header
          class="pf-v6-c-modal-box__header"
        >
          <h1
            class="pf-v6-c-modal-box__title"
            id="labelId"
          >
            <span
              class="pf-v6-c-modal-box__title-text"
            >
              Test Modal Content title
            </span>
          </h1>
          <div
            class="pf-v6-c-modal-box__description"
            id="descriptorId"
          >
            This is a test description.
          </div>
        </header>
        <div
          class="pf-v6-c-modal-box__body"
        >
          This is a ModalBox header
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal Content Test isOpen 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-backdrop"
  >
    <div
      class="pf-v6-l-bullseye"
    >
      <div
        aria-describedby="descriptorId"
        aria-labelledby="labelId"
        aria-modal="true"
        class="pf-v6-c-modal-box"
        data-ouia-component-type="PF6/ModalContent"
        data-ouia-safe="true"
        id="boxId"
        role="dialog"
      >
        <div
          class="pf-v6-c-modal-box__close"
        >
          <button
            aria-label="Close"
            class="pf-v6-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-:r1:"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                />
              </svg>
            </span>
          </button>
        </div>
        <header
          class="pf-v6-c-modal-box__header"
        >
          <h1
            class="pf-v6-c-modal-box__title"
            id="labelId"
          >
            <span
              class="pf-v6-c-modal-box__title-text"
            >
              Test Modal Content title
            </span>
          </h1>
        </header>
        <div
          class="pf-v6-c-modal-box__body"
          id="descriptorId"
        >
          This is a ModalBox header
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal Content Test only body 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-backdrop"
  >
    <div
      class="pf-v6-l-bullseye"
    >
      <div
        aria-describedby="descriptorId"
        aria-labelledby="labelId"
        aria-modal="true"
        class="pf-v6-c-modal-box"
        data-ouia-component-type="PF6/ModalContent"
        data-ouia-safe="true"
        id="boxId"
        role="dialog"
      >
        <div
          class="pf-v6-c-modal-box__close"
        >
          <button
            aria-label="Close"
            class="pf-v6-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-:r0:"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                />
              </svg>
            </span>
          </button>
        </div>
        <header
          class="pf-v6-c-modal-box__header"
        >
          <h1
            class="pf-v6-c-modal-box__title"
            id="labelId"
          >
            <span
              class="pf-v6-c-modal-box__title-text"
            >
              Test Modal Content title
            </span>
          </h1>
        </header>
        <div
          class="pf-v6-c-modal-box__body"
          id="descriptorId"
        >
          This is a ModalBox header
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal Content Test with footer 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-backdrop"
  >
    <div
      class="pf-v6-l-bullseye"
    >
      <div
        aria-describedby="descriptorId"
        aria-labelledby="labelId"
        aria-modal="true"
        class="pf-v6-c-modal-box"
        data-ouia-component-type="PF6/ModalContent"
        data-ouia-safe="true"
        id="boxId"
        role="dialog"
      >
        <div
          class="pf-v6-c-modal-box__close"
        >
          <button
            aria-label="Close"
            class="pf-v6-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-:r3:"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                />
              </svg>
            </span>
          </button>
        </div>
        <header
          class="pf-v6-c-modal-box__header"
        >
          <h1
            class="pf-v6-c-modal-box__title"
            id="labelId"
          >
            <span
              class="pf-v6-c-modal-box__title-text"
            >
              Test Modal Content title
            </span>
          </h1>
        </header>
        <div
          class="pf-v6-c-modal-box__body"
          id="descriptorId"
        >
          This is a ModalBox header
        </div>
        <footer
          class="pf-v6-c-modal-box__footer"
        >
          Testing
        </footer>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal Content Test with onclose 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-backdrop"
  >
    <div
      class="pf-v6-l-bullseye"
    >
      <div
        aria-describedby="descriptorId"
        aria-labelledby="labelId"
        aria-modal="true"
        class="pf-v6-c-modal-box pf-m-lg"
        data-ouia-component-type="PF6/ModalContent"
        data-ouia-safe="true"
        id="boxId"
        role="dialog"
      >
        <div
          class="pf-v6-c-modal-box__close"
        >
          <button
            aria-label="Close"
            class="pf-v6-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-:r5:"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                />
              </svg>
            </span>
          </button>
        </div>
        <header
          class="pf-v6-c-modal-box__header"
        >
          <h1
            class="pf-v6-c-modal-box__title"
            id="labelId"
          >
            <span
              class="pf-v6-c-modal-box__title-text"
            >
              Test Modal Content title
            </span>
          </h1>
        </header>
        <div
          class="pf-v6-c-modal-box__body"
          id="descriptorId"
        >
          This is a ModalBox header
        </div>
        <footer
          class="pf-v6-c-modal-box__footer"
        >
          Testing footer
        </footer>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal Content test without footer 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-backdrop"
  >
    <div
      class="pf-v6-l-bullseye"
    >
      <div
        aria-describedby="descriptorId"
        aria-labelledby="labelId"
        aria-modal="true"
        class="pf-v6-c-modal-box"
        data-ouia-component-type="PF6/ModalContent"
        data-ouia-safe="true"
        id="boxId"
        role="dialog"
      >
        <div
          class="pf-v6-c-modal-box__close"
        >
          <button
            aria-label="Close"
            class="pf-v6-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-:r4:"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                />
              </svg>
            </span>
          </button>
        </div>
        <header
          class="pf-v6-c-modal-box__header"
        >
          <h1
            class="pf-v6-c-modal-box__title"
            id="labelId"
          >
            <span
              class="pf-v6-c-modal-box__title-text"
            >
              Test Modal Content title
            </span>
          </h1>
        </header>
        <div
          class="pf-v6-c-modal-box__body"
          id="descriptorId"
        >
          This is a ModalBox header
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal Test with custom footer 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-backdrop"
  >
    <div
      class="pf-v6-l-bullseye"
    >
      <div
        aria-describedby="descriptorId"
        aria-labelledby="labelId"
        aria-modal="true"
        class="pf-v6-c-modal-box pf-m-lg"
        data-ouia-component-type="PF6/ModalContent"
        data-ouia-safe="true"
        id="boxId"
        role="dialog"
      >
        <div
          class="pf-v6-c-modal-box__close"
        >
          <button
            aria-label="Close"
            class="pf-v6-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-:r7:"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                />
              </svg>
            </span>
          </button>
        </div>
        <header
          class="pf-v6-c-modal-box__header"
        >
          <h1
            class="pf-v6-c-modal-box__title"
            id="labelId"
          >
            <span
              class="pf-v6-c-modal-box__title-text"
            >
              Test Modal Custom Footer
            </span>
          </h1>
        </header>
        <div
          class="pf-v6-c-modal-box__body"
          id="descriptorId"
        >
          This is a ModalBox header
        </div>
        <footer
          class="pf-v6-c-modal-box__footer"
        >
          <span
            id="test-custom-footer"
          >
            TEST
          </span>
        </footer>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Modal Test with custom header 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-backdrop"
  >
    <div
      class="pf-v6-l-bullseye"
    >
      <div
        aria-describedby="descriptorId"
        aria-labelledby="labelId"
        aria-modal="true"
        class="pf-v6-c-modal-box pf-m-lg"
        data-ouia-component-type="PF6/ModalContent"
        data-ouia-safe="true"
        id="boxId"
        role="dialog"
      >
        <div
          class="pf-v6-c-modal-box__close"
        >
          <button
            aria-label="Close"
            class="pf-v6-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-:r6:"
            data-ouia-component-type="PF6/Button"
            data-ouia-safe="true"
            type="button"
          >
            <span
              class="pf-v6-c-button__icon"
            >
              <svg
                aria-hidden="true"
                class="pf-v6-svg"
                fill="currentColor"
                height="1em"
                role="img"
                viewBox="0 0 20 20"
                width="1em"
              >
                <path
                  d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
                />
              </svg>
            </span>
          </button>
        </div>
        <header
          class="pf-v6-c-modal-box__header"
        >
          <span
            id="test-custom-header"
          >
            TEST
          </span>
        </header>
        <div
          class="pf-v6-c-modal-box__body"
          id="descriptorId"
        >
          This is a ModalBox header
        </div>
        <footer
          class="pf-v6-c-modal-box__footer"
        >
          Testing footer
        </footer>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
